--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@tinymce/tinymce-angular": "^3.6.0",
     "rxjs": "~6.5.4",
+    "tinymce": "^5.3.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
